<resources>
    <string name="ma_actions">Actions</string>
    <string name="ma_more">More</string>
    <string name="ma_basic_tests">Basic tests</string>
    <string name="ma_my_pie_tests">MyPie Tests</string>
    <string name="ma_whats_up">What\'s up?!?</string>
    <string name="ma_destroy_something">Destroy something!</string>
    <string name="ma_settings">Settings</string>
    <string name="ma_logger">Logger</string>
    <string name="ma_my_stupid_experiments">My stupid experiments</string>
    <string name="ma_my_drawable_tests">My drawable tests</string>
    <string name="ma_start_example_activity">Start example activity</string>
    <string name="ma_my_decorators_tests">My stupid decorators tests</string>
    <string name="ma_start_example_activity_2">Start example activity 2</string>
    <string name="ma_start_dialer_explicitly">Start google dialer explicitly</string>
    <string name="ma_start_dialer">Start dialer</string>
    <string name="ma_set_timer_5">set timer 5</string>
    <string name="ma_set_timer_15">set timer 15</string>
    <string name="ma_set_alarm_8_30">set alarm 8 30</string>
    <string name="ma_set_alarm_9_30_quickly">set alarm 9 30 quickly</string>
    <string name="ma_my_example_fragment_2">My example fragment 2</string>
    <string name="ma_my_machines_tests">MyMachines tests</string>
</resources>
