<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/grp_sections"
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/section_my_pie_tests"
            android:icon="@drawable/mr_ic_whatshot_black_24dp"
            android:title="@string/ma_my_pie_tests"
            android:titleCondensed="cmd:fragment pl.mareklangiewicz.myfragments.MyPieTestsFragment"
            />
        <item
            android:id="@+id/section_my_basic_tests"
            android:icon="@drawable/mr_ic_done_black_24dp"
            android:title="@string/ma_basic_tests"
            android:titleCondensed="cmd:fragment pl.mareklangiewicz.myfragments.MyBasicTestsFragment"
            />
        <item
            android:id="@+id/section_my_drawable_tests"
            android:icon="@drawable/mr_ic_whatshot_black_24dp"
            android:title="@string/ma_my_drawable_tests"
            android:titleCondensed="cmd:fragment pl.mareklangiewicz.myfragments.MyDrawableTestsFragment"
            />
        <item
            android:id="@+id/section_my_log_fragment"
            android:icon="@drawable/mr_ic_bug_report_black_24dp"
            android:title="@string/ma_logger"
            android:titleCondensed="cmd:fragment pl.mareklangiewicz.myfragments.MyLogFragment"
            />
        <item
            android:id="@+id/section_pue_tests_fragment"
            android:icon="@drawable/mr_ic_whatshot_black_24dp"
            android:title="@string/ma_pue_tests"
            android:titleCondensed="cmd:fragment pl.mareklangiewicz.myfragments.PueTestsFragment"
        />
        <item
            android:id="@+id/section_my_example_fragment"
            android:icon="@drawable/mr_ic_extension_black_24dp"
            android:title="@string/mf_my_example_fragment"
            android:titleCondensed="cmd:fragment pl.mareklangiewicz.myfragments.MyExampleFragment"
            />
        <item
            android:id="@+id/section_my_example_fragment_2"
            android:icon="@drawable/mr_ic_extension_black_24dp"
            android:title="@string/ma_my_example_fragment_2"
            android:titleCondensed="cmd:fragment pl.mareklangiewicz.myfragments.MyExampleFragment extra integer nr 332 extra double progress 0.667"
            />
        <item
            android:id="@+id/section_my_stupid_tests_fragment"
            android:icon="@drawable/mr_ic_extension_black_24dp"
            android:title="@string/ma_my_stupid_experiments"
            android:titleCondensed="cmd:fragment pl.mareklangiewicz.myfragments.MyStupidTestsFragment"
            />
        <item
            android:id="@+id/section_my_lldecorator_tests"
            android:icon="@drawable/mr_ic_create_black_24dp"
            android:title="@string/ma_my_decorators_tests"
            android:titleCondensed="cmd:fragment pl.mareklangiewicz.myfragments.MyDecoratorsTestsFragment"
            />
    </group>
    <item
        android:id="@+id/item_global_actions"
        android:title="@string/ma_actions"
        >
        <menu>
            <item
                android:id="@+id/action_whats_up"
                android:icon="@drawable/mr_ic_chat_black_24dp"
                android:title="@string/ma_whats_up"
                />
            <item
                android:id="@+id/action_start_dialer"
                android:icon="@drawable/mr_ic_whatshot_black_24dp"
                android:title="@string/ma_start_dialer"
                android:titleCondensed="cmd:action android.intent.action.DIAL"
                />
            <item
                android:id="@+id/action_set_timer_5"
                android:icon="@drawable/mr_ic_whatshot_black_24dp"
                android:title="@string/ma_set_timer_5"
                android:titleCondensed="cmd:set timer 5"
                />
            <item
                android:id="@+id/action_set_timer_15"
                android:icon="@drawable/mr_ic_whatshot_black_24dp"
                android:title="@string/ma_set_timer_15"
                android:titleCondensed="cmd:set timer 15"
                />
            <item
                android:id="@+id/action_set_alarm_8_30"
                android:icon="@drawable/mr_ic_whatshot_black_24dp"
                android:title="@string/ma_set_alarm_8_30"
                android:titleCondensed="cmd:set alarm 8 30"
                />
            <item
                android:id="@+id/action_set_alarm_9_30_quickly"
                android:icon="@drawable/mr_ic_whatshot_black_24dp"
                android:title="@string/ma_set_alarm_9_30_quickly"
                android:titleCondensed="cmd:set alarm 9 30 quickly"
                />
        </menu>
    </item>
    <item
        android:id="@+id/item_global_more_actions"
        android:title="@string/ma_more"
        >
        <menu>
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/mr_ic_settings_black_24dp"
                android:title="@string/ma_settings"
                />
            <item
                android:id="@+id/action_start_dialer_explicitly"
                android:icon="@drawable/mr_ic_whatshot_black_24dp"
                android:title="@string/ma_start_dialer_explicitly"
                android:titleCondensed="cmd:activity com.google.android.dialer/com.android.dialer.DialtactsActivity"
                />
            <item
                android:id="@+id/action_start_example_activity"
                android:icon="@drawable/mr_ic_whatshot_black_24dp"
                android:title="@string/ma_start_example_activity"
                android:titleCondensed="cmd:activity pl.mareklangiewicz.myactivities.MyExampleActivity"
                />
            <item
                android:id="@+id/action_destroy_something"
                android:icon="@drawable/mr_ic_whatshot_black_24dp"
                android:title="@string/ma_destroy_something"
                />
        </menu>
    </item>
</menu>